# utmosv2-exported

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: inference_example.py
scripts/: export_model.py  export_wrapper.py  verify_export.py
utmosv2_exported/: __init__.py  cli.py  config.py  download.py  predictor.py  preprocessing.py  utmosv2_config.json
